--- a/public/clients/assets/css/style.css
+++ b/public/clients/assets/css/style.css
@@ -173,7 +173,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: rgba(12, 11, 9, 0.6);
+  background: rgb(13 179 95);
   border-bottom: 1px solid rgba(12, 11, 9, 0.6);
   transition: all 0.5s;
   z-index: 997;
@@ -183,7 +183,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header.header-scrolled {
   top: 0;
-  background: rgba(0, 0, 0, 0.85);
+  background: rgb(18, 243, 130);
   border-bottom: 1px solid #37332a;
 }
 
@@ -451,7 +451,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(136 214 255 / 12%);
   position: absolute;
   bottom: 0;
   top: 0;
